# organization_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: __init__.py  organization.py
app/db/: session.py
app/models/: __init__.py  organization.py
app/repositories/: organization.py
app/schemas/: organization.py
app/services/: organization.py
migrations/: env.py
migrations/versions/: 143c5bd6d947_edited_employee_department_id_relation.py  9a1e7ba10a27_initial_migration.py
tests/integration/: test_organization_api.py
tests/unit/: test_schemas.py
