[project]
name = "organization-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Kan Alexandr",email = "aleksandr.kang@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

